...
            name="controller"
            type="com.deledzis.messenger.presentation.features.addchat.AddChatActionsHandler" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/fragment_add_chat_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar"
...

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/ic_back"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_margin="4dp"
                        android:onClick="@{controller::onBackClicked}"
                        app:cardBackgroundColor="@color/background"
                        app:cardCornerRadius="24dp"
...
                        app:hintEnabled="false"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_search"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_search"
                            android:drawablePadding="12dp"
                            android:drawableTint="@color/gray_400"
                            android:hint="@string/placeholder_search"
...
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:gravity="center"
                    android:text="@string/add_chat_init_title"
                    android:textColor="@color/text"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
...
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:gravity="center"
                    android:text="@string/add_chat_empty_title"
                    android:textColor="@color/text"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
...
