<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.deledzis.messenger.presentation.features.settings.SettingsViewModel" />

        <variable
            name="controller"
            type="com.deledzis.messenger.presentation.features.settings.SettingsActionsHandler" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/fragment_settings_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/background">

        <com.google.android.material.appbar.AppBarLayout
            style="@style/Widget.MaterialComponents.AppBarLayout.PrimarySurface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@color/background"
                android:backgroundTint="@color/background"
                android:minHeight="64dp"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/close_container"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="16dp"
                        android:clickable="@{!viewModel.loading}"
                        android:focusable="@{!viewModel.loading}"
                        android:onClick="@{controller::onCancelClicked}"
                        app:cardBackgroundColor="@color/background"
                        app:cardCornerRadius="24dp"
                        app:cardElevation="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/tv_title"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/ic_close"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_close_blue" />

                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/settings"
                        android:textColor="@color/text"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/save_container"
                        app:layout_constraintStart_toEndOf="@+id/close_container"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/save_container"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="16dp"
                        android:clickable="@{viewModel.password != null &amp;&amp; !viewModel.password.empty}"
                        android:focusable="@{viewModel.password != null &amp;&amp; !viewModel.password.empty}"
                        android:onClick="@{() -> viewModel.updateUserData()}"
                        app:cardBackgroundColor="@color/background"
                        app:cardCornerRadius="24dp"
                        app:cardElevation="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ProgressBar
                            android:id="@+id/save_progress"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center"
                            android:indeterminateTint="@color/primary"
                            android:visibility="gone" />

                        <ImageView
                            android:id="@+id/ic_save"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_done" />

                    </com.google.android.material.card.MaterialCardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:id="@+id/settings_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/layout_side_padding"
                android:paddingEnd="@dimen/layout_side_padding">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_32dp"
                    android:text="@string/login"
                    android:textColor="@color/text_label" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_username"
                    style="@style/InputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tie_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.username}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/name"
                    android:textColor="@color/text_label" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_nickname"
                    style="@style/InputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tie_nickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.nickname}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/password"
                    android:textColor="@color/text_label" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password"
                    style="@style/InputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tie_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:text="@={viewModel.password}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/new_password"
                    android:textColor="@color/text_label" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_new_password"
                    style="@style/InputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tie_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:text="@={viewModel.newPassword}" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/settings_need_password_disclaimer"
                    android:textColor="@color/text_outlined" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_logout"
                    style="@style/TextButton.Red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="@dimen/size_32dp"
                    android:enabled="@{!viewModel.loading}"
                    android:onClick="@{controller::onLogoutClicked}"
                    android:text="@string/action_logout"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:rippleColor="@color/red" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_delete_account"
                    style="@style/TextButton.Red.Filled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="@dimen/size_32dp"
                    android:enabled="@{!viewModel.loading}"
                    android:onClick="@{controller::onDeleteAccountClicked}"
                    android:text="@string/action_delete_account"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:rippleColor="@color/red" />

            </LinearLayout>

        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>